	* many files: Add doxygen updates to categorize modules into groups. Convert a lot of comments over to doxygen style. Add some text giving a basic overview of channels.
	* apps/app_chanisavail.c: Make priority jumping optional
	* apps/app_db.c: Add an exit status variable and make priority jumping optional
	* apps/app_enumlookup.c: Make priority jumping optional

2005-11-05  Kevin P. Fleming  <kpfleming@digium.com>

	* Makefile: don't rebuild asterisk/build.h unless the asterisk binary is going to be relinked for some other reason (stops spurious recompile/link every time 'make' is issued); clean up variable substitutions to use consistent syntax
	* asterisk.c: don't include asterisk/build.h (it's unnecessary)
	* cli.c: don't include asterisk/build.h, use extern references to buildinfo.c
	* buildinfo.c: new file to hold version info strings

2005-11-04  Kevin P. Fleming  <kpfleming@digium.com>

	* apps/app_mixmonitor.c (mixmonitor_exec): correct app name in an error message

2005-11-04  Russell Bryant  <russell@digium.com>

	* channels/chan_iax2.c: Create a function that stores a peer's status in a given buffer.  Use this function in "iax2 show peers" and "iax2 show peer <peername>".  Also, add the peer's status as an option to the IAXPEER dialplan function.

2005-11-04  Kevin P. Fleming  <kpfleming@digium.com>

	* include/asterisk/compiler.h: don't try to use always_inline on old compilers

2005-11-03  Russell Bryant  <russell@digium.com>

	* res/res_agi.c: initialize buffer for result so that the contents are always valid in the response to GET FULL VARIABLE

2005-11-03  Kevin P. Fleming  <kpfleming@digium.com>

	* doc/README.variables: document DYNAMIC_FEATURES

	* res/res_features.c (ast_bridge_call): remove unused variables

	* apps/app_dial.c (dial_exec_full): simplify options and flag usage

	* include/asterisk/app.h: re-work application arg/option parsing APIs for consistent naming, add doxygen docs for option API
	* many files: update to new APIs
